--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Image_Processing\All_Project_Files\Final_Project_Files\Attendance_System.ui
 Image_Processing\All_Project_Files\Final_Project_Files\ui_Attendance_System.py
 Image_Processing\All_Project_Files\Final_Project_Files\__pycache__
 *.__pycache__
-*.pyc
+*.pycAll_Project_Files\Final_Project_Files\Blur_Image_Screen.py
