--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ All_Project_Files\Final_Project_Files\ui_Attendance_System.py
 All_Project_Files\Final_Project_Files\__pycache__
 *.__pycache__
 *.pyc
+test.py
+
+All_Project_Files\Final_Project_Files\Test_Down_Sampling_Image_Screen_ui.py
+All_Project_Files\Final_Project_Files\Test_Down_Sampling_Image_Screen.py
+All_Project_Files\Final_Project_Files\Test_Down_Sampling_Image_Screen.ui
